# accelerate-lapacke

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: git-sync.yml
cmake/: HandlePolicies.cmake  ParseTBDMacros.cmake
src/: CMakeLists.txt
